[package]
name = "traffic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.36.0"
piston_window = "0.107.0"
piston2d-opengl_graphics = "0.72.0"
rusttype = "0.8.2"
fnv = "1.0.6"
